Fix data format for configuration

--- a/repositories/ishrepo_config.json
+++ b/repositories/ishrepo_config.json
@@ -1,6 +1,6 @@
 {
     "data": {
-		"discoveryEnabled": "false",
-		"discoveryIntervalHours": "-1"
+		"discoveryEnabled": false,
+		"discoveryIntervalHours": -1
 	}
 }
